Navbar spacing issues

--- a/src/styles/Login.css
+++ b/src/styles/Login.css
@@ -19,11 +19,9 @@
 }
 
 .login-container{
+    margin-top: 100px; /* Moves the container down by 100 pixels */
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
-    height: 100vh;
-    background-color: #802c2c;
-    
+    justify-content: center;
 }
