--- a/src/styles/Profile.css
+++ b/src/styles/Profile.css
@@ -172,3 +172,11 @@ body, html {
 .skill-item {
     font-size: 1.125rem;
 }
+
+.login-container {
+    margin-top: 100px; /* Moves the container down by 100 pixels */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
